module(name = "jetpack_compose")

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_java", version = "8.14.0")
bazel_dep(name = "rules_kotlin", version = "1.9.5")
local_path_override(
    module_name = "rules_kotlin",
    path = "../..",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_shell", version = "0.4.1")
bazel_dep(name = "rules_android", version = "0.7.0")

register_toolchains(
    "@rules_android//toolchains/android:android_default_toolchain",
    "@rules_android//toolchains/android_sdk:android_sdk_tools",
)

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

bazel_dep(name = "rules_robolectric", version = "4.14.1.2", repo_name = "robolectric")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven_rules_kotlin_example",
    aar_import_bzl_label = "@rules_android//rules:rules.bzl",
    artifacts = [
        "org.jetbrains.kotlin:kotlin-compose-compiler-plugin-embeddable:2.3.0",
        "androidx.core:core-ktx:1.15.0",
        "androidx.appcompat:appcompat:1.7.0",
        "androidx.activity:activity-compose:1.7.0",
        "androidx.collection:collection:1.5.0-alpha06",
        "androidx.lifecycle:lifecycle-runtime:2.6.1",
        "androidx.lifecycle:lifecycle-common:2.6.1",
        "androidx.compose.material:material:1.7.6",
        "androidx.compose.ui:ui:1.7.6",
        "androidx.compose.ui:ui-tooling:1.7.6",
        "androidx.compose.runtime:runtime:1.7.6",
    ],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    resolver = "maven",
    use_starlark_android_rules = True,
)
use_repo(maven, "maven_rules_kotlin_example")
