module(name = "kover-example")

bazel_dep(name = "rules_java", version = "8.9.0")
bazel_dep(name = "rules_kotlin", version = "2.2.0")
local_path_override(
    module_name = "rules_kotlin",
    path = "../..",
)

bazel_dep(name = "rules_jvm_external", version = "6.10")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "junit:junit:4.13.2",
        "org.jetbrains.kotlinx:kover-jvm-agent:0.8.3",
    ],
    repositories = [
        "https://maven-central.storage.googleapis.com/repos/central/data/",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

register_toolchains("//:kotlin_toolchain")
