module(name = "multiplex-example")

bazel_dep(name = "rules_android", version = "0.5.1")
bazel_dep(name = "rules_java", version = "6.4.0")
bazel_dep(name = "rules_kotlin", version = "1.9.5")
bazel_dep(name = "rules_jvm_external", version = "5.3")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "junit:junit:4.13.2",
        "org.jetbrains.kotlinx:kotlinx-serialization-core-jvm:1.0.1",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
