module(name = "nested_module_resources")

bazel_dep(name = "rules_kotlin", version = "1.9.5")
local_path_override(
    module_name = "rules_kotlin",
    path = "../..",
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "nested", version = "0")
local_path_override(
    module_name = "nested",
    path = "nested",
)
