module(name = "trival-example")

bazel_dep(name = "rules_java", version = "7.7.2")
bazel_dep(name = "rules_kotlin")
local_path_override(
    module_name = "rules_kotlin",
    path = "../..",
)

bazel_dep(name = "rules_jvm_external", version = "5.3")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.expedia:graphql-kotlin:1.0.0-RC5",
        "com.expedia:graphql-kotlin-schema-generator:1.0.0-RC5",
        "com.expedia:graphql-kotlin-federation:1.0.0-RC5",
        "com.graphql-java:graphql-java:13.0",
        "org.opentest4j:opentest4j:1.1.1",
        "org.apiguardian:apiguardian-api:1.0.0",
        "org.junit.platform:junit-platform-commons:1.4.2",
        "org.junit.jupiter:junit-jupiter-api:5.4.2",
        "org.junit.jupiter:junit-jupiter-params:5.4.2",
        "org.apache.logging.log4j:log4j-core:2.16.0",
    ],
    repositories = [
        "https://maven-central.storage.googleapis.com/repos/central/data/",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
