# Copyright 2020 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_java//java:java_library.bzl", "java_library")
load(":kapt.bzl", "kapt_compiler_plugin")
load(":ksp.bzl", "kt_configure_ksp")

package(default_visibility = ["//visibility:public"])

# Configures the KSP plugins
kt_configure_ksp()

# Kotlin standard library
alias(
    name = "kotlin-stdlib",
    actual = "@kotlin_rules_maven//:org_jetbrains_kotlin_kotlin_stdlib",
)

# For backward compatibility - in Kotlin 1.8+ JDK extensions are in main stdlib
alias(
    name = "kotlin-stdlib-jdk7",
    actual = ":kotlin-stdlib",
)

alias(
    name = "kotlin-stdlib-jdk8",
    actual = ":kotlin-stdlib",
)

alias(
    name = "kotlin-reflect",
    actual = "@kotlin_rules_maven//:org_jetbrains_kotlin_kotlin_reflect",
)

alias(
    name = "kotlin-test",
    actual = "@kotlin_rules_maven//:org_jetbrains_kotlin_kotlin_test",
)

alias(
    name = "annotations",
    actual = "@kotlin_rules_maven//:org_jetbrains_annotations",
)

alias(
    name = "kotlinx-coroutines-core-jvm",
    actual = "@kotlin_rules_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
)

# Kotlin compiler - neverlink for compile-time only
java_library(
    name = "kotlin-compiler",
    exports = ["@kotlin_rules_maven//:org_jetbrains_kotlin_kotlin_compiler"],
    neverlink = True,
)

java_library(
    name = "kotlin-annotation-processing",
    exports = ["@kotlin_rules_maven//:org_jetbrains_kotlin_kotlin_annotation_processing"],
    neverlink = True,
)

alias(
    name = "jvm-abi-gen",
    actual = "@kotlin_rules_maven//:org_jetbrains_kotlin_jvm_abi_gen",
)

alias(
    name = "kotlin-script-runtime",
    actual = "@kotlin_rules_maven//:org_jetbrains_kotlin_kotlin_script_runtime",
)

# Compiler plugins
alias(
    name = "allopen-compiler-plugin",
    actual = "@kotlin_rules_maven//:org_jetbrains_kotlin_kotlin_allopen_compiler_plugin",
)

alias(
    name = "noarg-compiler-plugin",
    actual = "@kotlin_rules_maven//:org_jetbrains_kotlin_kotlin_noarg_compiler_plugin",
)

alias(
    name = "sam-with-receiver-compiler-plugin",
    actual = "@kotlin_rules_maven//:org_jetbrains_kotlin_kotlin_sam_with_receiver_compiler_plugin",
)

alias(
    name = "kotlin-serialization-compiler-plugin",
    actual = "@kotlin_rules_maven//:org_jetbrains_kotlin_kotlin_serialization_compiler_plugin",
)

# Alias for backward compatibility
alias(
    name = "kotlinx-serialization-compiler-plugin",
    actual = ":kotlin-serialization-compiler-plugin",
)

alias(
    name = "parcelize-compiler-plugin",
    actual = "@kotlin_rules_maven//:org_jetbrains_kotlin_kotlin_parcelize_compiler",
)

alias(
    name = "parcelize-runtime",
    actual = "@kotlin_rules_maven//:org_jetbrains_kotlin_kotlin_parcelize_runtime",
)

kapt_compiler_plugin(
    name = "kapt",
    id = "org.jetbrains.kotlin.kapt3",
)

bzl_library(
    name = "compiler",
    srcs = glob(["*.bzl"]),
)
