# Copyright 2020 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//kotlin:jvm.bzl", "kt_jvm_import")
load(":compiler.bzl", "kt_configure_compiler")
load(":kapt.bzl", "kapt_compiler_plugin")

package(default_visibility = ["//visibility:public"])

# Configures compiler and stdlib/plugin labels from the downloaded Kotlin distribution.
kt_configure_compiler()

# BTAPI runtime artifacts required by default toolchains.
kt_jvm_import(
    name = "kotlin-build-tools-impl",
    jar = "@kotlin_build_tools_impl//file",
)

alias(
    name = "kotlin-compiler-embeddable",
    actual = ":kotlin-compiler",
)

alias(
    name = "kotlin-annotation-processing-embeddable",
    actual = ":kotlin-annotation-processing",
)

# KSP2 processor classpath artifacts from downloaded KSP distribution.
kt_jvm_import(
    name = "symbol-processing-aa",
    jar = "@com_github_google_ksp//:symbol-processing-aa.jar",
)

kt_jvm_import(
    name = "symbol-processing-api",
    jar = "@com_github_google_ksp//:symbol-processing-api.jar",
)

kt_jvm_import(
    name = "symbol-processing-common-deps",
    jar = "@com_github_google_ksp//:symbol-processing-common-deps.jar",
)

kapt_compiler_plugin(
    name = "kapt",
    id = "org.jetbrains.kotlin.kapt3",
)

bzl_library(
    name = "compiler",
    srcs = glob(["*.bzl"]),
)
