load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("//src/main/starlark/release:packager.bzl", "release_archive")

release_archive(
    name = "pkg",
    src_map = {
        "BUILD.release.bazel": "BUILD.bazel",
    },
)

# Flag that controls the emission of jdeps files during kotlin jvm compilation.
bool_flag(
    name = "jvm_emit_jdeps",
    build_setting_default = True,
    visibility = ["//visibility:public"],
)

# Kotlin strict deps can be enabled by setting the following value on the command line
# --@rules_kotlin//kotlin/settings:experimental_prune_transitive_deps=True
bool_flag(
    name = "experimental_prune_transitive_deps",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)
