load("@dev_io_bazel_rules_kotlin//src/main/starlark/release:packager.bzl", "release_archive")

release_archive(
    name = "pkg",
    srcs = ["WORKSPACE"],
    src_map = {
        "BUILD.release.bazel": "BUILD.bazel",
    },
    deps = [
        "//starlark/jvm:pkg",
        "//starlark/kotlin:pkg",
    ],
)
