load("@com_google_protobuf//bazel/toolchains:proto_lang_toolchain.bzl", "proto_lang_toolchain")

proto_lang_toolchain(
    name = "protoc_java_toolchain",
    command_line = "--java_out=%s",
    progress_message = "Generating Java proto_library %{label}",
    runtime = "@kotlin_rules_maven//:com_google_protobuf_protobuf_java",
    toolchain_type = "@com_google_protobuf//bazel/private:java_toolchain_type",
)
